--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Frontend-React",
   "version": "1.0.0",
-  "description": "React.js and friends Front-End for a API-Rails (GraphQL) Backend ",
+  "description": "React.js and friends: Front-End for API-Rails (GraphQL) Backend (github.com/moseslucas/api-rails-graphql)",
   "main": "app.js",
   "repository": "github.com/moseslucas/frontend-react",
   "author": "Moses Lucas",
@@ -25,7 +25,7 @@
   "devDependencies": {
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
-    "babel-loader": "6.2.4",
+    "babel-loader": "*",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-preset-es2015": "6.6.0", 
     "babel-preset-react": "6.5.0",  
@@ -43,7 +43,7 @@
     "eventsource-polyfill": "0.9.6",
     "expect": "1.19.0",
     "express": "4.13.4",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "*",
     "file-loader": "0.8.5",
     "jsdom": "8.5.0",
     "nock": "8.0.0",
@@ -55,8 +55,8 @@
     "rimraf": "2.5.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.13.0",
-    "webpack-dev-middleware": "1.6.1",
+    "webpack": "3.10.0",
+    "webpack-dev-middleware": "*",
     "webpack-hot-middleware": "2.10.0"
   }
 }
